# pycad-workspace

./: .gitignore  README.md  pyproject.toml
demos/: class_example.py  joint-align-parts.py  occ_bottle.py  offset_example.py  sketch-profile-construction.py
demos/doodles/: bubble_text.py
mixins/: objects_sketch.py  objects_tangent.py
projects/: cabinet.py  furniture.py  spool.py
too_tall_toby/: README.md  helpers.py  ppp0101.py  ppp0102-incomplete.py  ppp0102.py  ppp0103.py  ppp0104.py  ppp0105.py  ppp0106.py  ppp0107-incomplete.py  ppp0107.py  ppp0108.py  ppp0109-incomplete.py  ppp0109.py  ppp0110.py  t23t24.py  t240101.py  t240104.py  t240401.py  t24spo06.py  t250110.py  t250201.py  t250202.py  t250301.py  tootalltoby.py  ttt230202.py  ttt23t24-incomplete.py  ttt23t24.py
