[project]
name = "pycad-workspace"
version = "0.1.0"
description = "Personal workspace for python codeCAD projects, demos, and examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build123d==0.9.0",
    "ocp-vscode>=2.6.1",
    "pip>=25.0",
    "ruff>=0.9.3",
    "sympy",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = ["F403", "F405"]
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"